--- a/footer1.html
+++ b/footer1.html
@@ -80,9 +80,9 @@
         <div class="footer-nav footer-nav-variant-light">
             <div class="modern-grid">
                 <ul class="column-3">
-                    <li><a href="../index.html">Samara</a></li>
-                    <li><a href="../news">News</a></li>
-                    <li><a href="../jobs">Jobs</a></li>
+                    <li><a href="../index.html">Yash Home Decors</a></li>
+                    <li><a href="../news">Products</a></li>
+                    <li><a href="../jobs">Portfolio</a></li>
                     <li>
                         <a href="../showrooms">Showrooms</a>
                     </li>
@@ -91,8 +91,8 @@
                     </li>
                 </ul>
                 <ul class="column-3">
-                    <li><a href="../backyard">Backyard</a></li>
-                    <li><a href="configure">Configure</a></li>
+                    <li><a href="../backyard">Home</a></li>
+                    <li><a href="configure">About</a></li>
                     <li>
                         <a href="how-it-works">How it works</a>
                     </li>
@@ -105,13 +105,13 @@
                         Social
                     </li>
                     <li>
-                        <a href="https://instagram.com/meetsamara" target="_blank">Instagram</a>
+                        <a href="https://instagram.com/yashhomedecors" target="_blank">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/@meetsamara/" target="_blank">YouTube</a>
+                        <a href="https://www.youtube.com/yashhomedecors/" target="_blank">YouTube</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/meetsamara" target="_blank">LinkedIn</a>
+                        <a href="https://www.linkedin.com/company/Yashhomedecors" target="_blank">LinkedIn</a>
                     </li>
                 </ul>
 
@@ -128,7 +128,7 @@
                         <div class="type-14 footer-contact-secondary">
                             Drop us your email to learn what’s next.
                         </div>
-                        <form class="footer-contact-input" action="https://www.samara.com/">
+                        <form class="footer-contact-input" action="https://www.Yashhomedecors.com/">
                             <input type="email" class="type-14 m-type-16" required name="email" aria-label="Your email"
                                 tabindex="-1" />
                             <input tabindex="-1" loading="lazy" type="image"
@@ -143,11 +143,10 @@
                             <div class="type-14 footer-contact-secondary footer-contact-subscription-success-note">
                                 <img loading="lazy" src="../assets/images/icons/checkmark-white.svg" width="12"
                                     height="12" alt="Checkmark" />
-                                You’ve subscribed to Samara updates.
+                                You’ve subscribed to Yashhomedecors updates.
                             </div>
                             <div class="type-14 footer-contact-secondary footer-contact-subscription-failure-note">
-                                Something went wrong.<br /><a
-                                    href="mailto:customercare@samara.com?subject=Site error: joining mailing list">Click
+                                Something went wrong.<br /><a href="mailto:yashdecoratives@gmail.com">Click
                                     here</a>
                                 to subscribe via email.
                             </div>
@@ -158,7 +157,7 @@
             <div class="spacer-32"></div>
             <div class="modern-grid type-14 footer-legal">
                 <div class="column-9 m-column-6">
-                    © 2024 Samara Living Inc.
+                    © 2024 Yashhomedecors Inc.
                     <div class="m-spacer-8"></div>
                 </div>
                 <div class="column-3 m-column-6">
