--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Footer 1</h5>
                         <p class="card-text">View another footer design.</p>
-                        <a href="footer (1).html" class="btn btn-primary">Preview</a>
+                        <a href="footer1.html" class="btn btn-primary">Preview</a>
                     </div>
                 </div>
             </div>
